apps/yudarlinn-listener/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yudarlinn-listener
  namespace: leaven
  labels:
    app: yudarlinn-listener
spec:
  selector:
    matchLabels:
      app: yudarlinn-listener
  template:
    metadata:
      labels:
        app: yudarlinn-listener
    spec:
      serviceAccountName: yudarlinn-listener
      automountServiceAccountToken: true
      containers:
      - name: yudarlinn-listener
        image: hyeonwoo5342/yudarlinn-listener:4
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: '300Mi'
            cpu: '150m'
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 25
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
