apps/yudarlinn-listener/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yudarlinn-listener-ingress
  namespace: leaven
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: yudarlinn-api.leaven.team
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: yudarlinn-listener
            port:
              number: 3000
